@@ -78,6 +78,14 @@
 							<param name="widget_header" value="$LOCALIZE[31148]"/>
 							<param name="widget_target" value="videos"/>
 							<param name="list_id" value="5900"/>
+							<param name="visible" value="!Skin.HasSetting(UseSmallerCategories)" />
+						</include>
+						<include content="WidgetListCategoriesSmall" condition="Library.HasContent(movies) + !Skin.HasSetting(hide_moviescategory)">
+							<param name="content_path" value="library://video/movies/"/>
+							<param name="widget_header" value="$LOCALIZE[31148]"/>
+							<param name="widget_target" value="videos"/>
+							<param name="list_id" value="5900"/>
+							<param name="visible" value="Skin.HasSetting(UseSmallerCategories)" />
 						</include>
 						<include content="WidgetListPoster" condition="Library.HasContent(movies) + !Skin.HasSetting(hide_recentlymovies)">
 							<param name="content_path" value="$VAR[HideWatchedMoviesFromRecentlyVar]"/>
@@ -145,6 +153,14 @@
 							<param name="widget_header" value="$LOCALIZE[31148]"/>
 							<param name="widget_target" value="videos"/>
 							<param name="list_id" value="6900"/>
+							<param name="visible" value="!Skin.HasSetting(UseSmallerCategories)" />
+						</include>
+						<include content="WidgetListCategoriesSmall" condition="Library.HasContent(tvshows) + !Skin.HasSetting(hide_tvshowscategory)">
+							<param name="content_path" value="library://video/tvshows/"/>
+							<param name="widget_header" value="$LOCALIZE[31148]"/>
+							<param name="widget_target" value="videos"/>
+							<param name="list_id" value="6900"/>
+							<param name="visible" value="Skin.HasSetting(UseSmallerCategories)" />
 						</include>
 						<include content="WidgetListEpisodes" condition="Library.HasContent(tvshows) + !Skin.HasSetting(hide_recentlytvshows)">
 							<param name="content_path" value="$VAR[HideWatchedEpisodesFromRecentlyVar]"/>
@@ -216,6 +232,14 @@
 							<param name="widget_header" value="$LOCALIZE[31148]"/>
 							<param name="widget_target" value="music"/>
 							<param name="list_id" value="7900"/>
+							<param name="visible" value="!Skin.HasSetting(UseSmallerCategories)" />
+						</include>
+						<include content="WidgetListCategoriesSmall" condition="Library.HasContent(music) + !Skin.HasSetting(hide_musiccategory)">
+							<param name="content_path" value="library://music/"/>
+							<param name="widget_header" value="$LOCALIZE[31148]"/>
+							<param name="widget_target" value="music"/>
+							<param name="list_id" value="7900"/>
+							<param name="visible" value="Skin.HasSetting(UseSmallerCategories)" />
 						</include>
 						<include content="WidgetListSquare" condition="Library.HasContent(music) + !Skin.HasSetting(hide_recentlyplayedalbums)">
 							<param name="content_path" value="musicdb://recentlyplayedalbums"/>
@@ -287,7 +311,14 @@
 							<param name="widget_header" value="$LOCALIZE[31148]"/>
 							<param name="widget_target" value="addonbrowser"/>
 							<param name="list_id" value="8900"/>
-							<param name="visible" value="Integer.IsGreater(Container(8100).NumItems,0) | Integer.IsGreater(Container(8200).NumItems,0) | Integer.IsGreater(Container(8300).NumItems,0) | Integer.IsGreater(Container(8400).NumItems,0) | Integer.IsGreater(Container(8500).NumItems,0) | Integer.IsGreater(Container(8700).NumItems,0)"/>
+							<param name="visible" value="[Integer.IsGreater(Container(8100).NumItems,0) | Integer.IsGreater(Container(8200).NumItems,0) | Integer.IsGreater(Container(8300).NumItems,0) | Integer.IsGreater(Container(8400).NumItems,0) | Integer.IsGreater(Container(8500).NumItems,0) | Integer.IsGreater(Container(8700).NumItems,0)] + !Skin.HasSetting(UseSmallerCategories)"/>
+						</include>
+						<include content="WidgetListCategoriesSmall" condition="!Skin.HasSetting(hide_addonscategories)">
+							<param name="content_path" value="addons://"/>
+							<param name="widget_header" value="$LOCALIZE[31148]"/>
+							<param name="widget_target" value="addonbrowser"/>
+							<param name="list_id" value="8900"/>
+							<param name="visible" value="[Integer.IsGreater(Container(8100).NumItems,0) | Integer.IsGreater(Container(8200).NumItems,0) | Integer.IsGreater(Container(8300).NumItems,0) | Integer.IsGreater(Container(8400).NumItems,0) | Integer.IsGreater(Container(8500).NumItems,0) | Integer.IsGreater(Container(8700).NumItems,0)] + Skin.HasSetting(UseSmallerCategories)"/>
 						</include>
 						<include content="WidgetListSquare" condition="!Skin.HasSetting(hide_videoaddons)">
 							<param name="content_path" value="addons://sources/video/"/>
@@ -370,6 +401,14 @@
 							<param name="widget_header" value="$LOCALIZE[31148]"/>
 							<param name="widget_target" value="videos"/>
 							<param name="list_id" value="11900"/>
+							<param name="visible" value="!Skin.HasSetting(UseSmallerCategories)" />
+						</include>
+						<include content="WidgetListCategoriesSmall" condition="!Skin.HasSetting(hide_videocategories)">
+							<param name="content_path" value="library://video/"/>
+							<param name="widget_header" value="$LOCALIZE[31148]"/>
+							<param name="widget_target" value="videos"/>
+							<param name="list_id" value="11900"/>
+							<param name="visible" value="Skin.HasSetting(UseSmallerCategories)" />
 						</include>
 						<include content="WidgetListCategories" condition="!Skin.HasSetting(hide_videosources)">
 							<param name="content_path" value="sources://video/"/>
@@ -440,6 +479,14 @@
 							<param name="list_id" value="12900"/>
 							<param name="pvr_submenu" value="true"/>
 							<param name="pvr_type" value="TV"/>
+							<param name="visible" value="!Skin.HasSetting(UseSmallerCategories)" />
+						</include>
+						<include content="WidgetListCategoriesSmall" condition="System.HasPVRAddon + !Skin.HasSetting(hide_tvcategories)">
+							<param name="widget_header" value="$LOCALIZE[31148]"/>
+							<param name="list_id" value="12900"/>
+							<param name="pvr_submenu" value="true"/>
+							<param name="pvr_type" value="TV"/>
+							<param name="visible" value="Skin.HasSetting(UseSmallerCategories)" />
 						</include>
 						<include content="WidgetListChannels" condition="System.HasPVRAddon + !Skin.HasSetting(hide_lastplayedchannels)">
 							<param name="content_path" value="pvr://channels/tv/*?view=lastplayed"/>
@@ -514,6 +561,14 @@
 							<param name="list_id" value="13900"/>
 							<param name="pvr_submenu" value="true"/>
 							<param name="pvr_type" value="Radio"/>
+							<param name="visible" value="!Skin.HasSetting(UseSmallerCategories)" />
+						</include>
+						<include content="WidgetListCategoriesSmall" condition="System.HasPVRAddon + !Skin.HasSetting(hide_radiocategories)">
+							<param name="widget_header" value="$LOCALIZE[31148]"/>
+							<param name="list_id" value="13900"/>
+							<param name="pvr_submenu" value="true"/>
+							<param name="pvr_type" value="Radio"/>
+							<param name="visible" value="Skin.HasSetting(UseSmallerCategories)" />
 						</include>
 						<include content="WidgetListChannels" condition="System.HasPVRAddon + !Skin.HasSetting(hide_lastplayedradio)">
 							<param name="content_path" value="pvr://channels/radio/*?view=lastplayed"/>
@@ -717,6 +772,14 @@
 							<param name="widget_header" value="$LOCALIZE[31148]"/>
 							<param name="widget_target" value="videos"/>
 							<param name="list_id" value="16900"/>
+							<param name="visible" value="!Skin.HasSetting(UseSmallerCategories)" />
+						</include>
+						<include content="WidgetListCategoriesSmall" condition="Library.HasContent(musicvideos) + !Skin.HasSetting(hide_musicvideocategory)">
+							<param name="content_path" value="library://music/musicvideos/"/>
+							<param name="widget_header" value="$LOCALIZE[31148]"/>
+							<param name="widget_target" value="videos"/>
+							<param name="list_id" value="16900"/>
+							<param name="visible" value="Skin.HasSetting(UseSmallerCategories)" />
 						</include>
 						<include content="WidgetListEpisodes" condition="Library.HasContent(musicvideos) + !Skin.HasSetting(hide_recentlyaddedmusicvideos)">
 							<param name="content_path" value="videodb://recentlyaddedmusicvideos/"/>
