@@ -721,6 +721,105 @@
 			</control>
 		</definition>
 	</include>
+	<include name="WidgetListCategoriesSmall">
+		<param name="item_limit">50</param>
+		<param name="icon">$INFO[ListItem.Icon]</param>
+		<param name="icon_height">80</param>
+		<param name="pvr_submenu">false</param>
+		<param name="pvr_type">TV</param>
+		<param name="visible">true</param>
+		<param name="fallback_image">DefaultFolder.png</param>
+		<definition>
+			<include content="CategoryLabel">
+				<param name="label">$VAR[LabelCategoriesSmallVar]</param>
+				<param name="list_id" value="$PARAM[list_id]"/>
+				<param name="visible" value="$PARAM[visible]"/>
+			</include>
+			<include content="BusyListSpinner">
+				<param name="list_id" value="$PARAM[list_id]"/>
+				<param name="visible" value="$PARAM[visible]"/>
+			</include>
+			<control type="panel" id="$PARAM[list_id]">
+				<left>0</left>
+				<top>110</top>
+				<right>0</right>
+				<height>220</height>
+				<include content="WidgetListCommon">
+					<param name="list_id" value="$PARAM[list_id]"/>
+				</include>
+				<visible>$PARAM[visible]</visible>
+				<visible>Integer.IsGreater(Container($PARAM[list_id]).NumItems,0) | Container($PARAM[list_id]).IsUpdating</visible>
+				<itemlayout width="122" height="220">
+					<control type="group">
+						<left>70</left>
+						<control type="image">
+							<width>140</width>
+							<height>120</height>
+							<texture>dialogs/dialog-bg-nobo.png</texture>
+							<bordertexture border="21">overlays/shadow.png</bordertexture>
+							<bordersize>20</bordersize>
+						</control>
+						<control type="image">
+							<top>20</top>
+							<left>30</left>
+							<width>80</width>
+							<height>$PARAM[icon_height]</height>
+							<texture fallback="$PARAM[fallback_image]">$PARAM[icon]</texture>
+							<aspectratio>keep</aspectratio>
+						</control>
+					</control>
+				</itemlayout>
+				<focusedlayout width="122" height="220">
+					<control type="button">
+						<onfocus>SetProperty(SkinHelper.WidgetContainer,$PARAM[list_id])</onfocus>
+						<onunfocus>ClearProperty(SkinHelper.WidgetContainer,$PARAM[list_id])</onunfocus>
+						<texturenofocus></texturenofocus>
+						<texturefocus></texturefocus>
+					</control>
+					<control type="group">
+						<depth>DepthContentPopout</depth>
+						<left>70</left>
+						<animation type="Focus" condition="!Skin.HasSetting(no_animations)">
+							<effect type="zoom" start="100" end="116" time="200" tween="sine" easing="inout" center="140,70" />
+						</animation>
+						<animation type="Unfocus" condition="!Skin.HasSetting(no_animations)">
+							<effect type="zoom" start="116" end="100" time="200" tween="sine" easing="inout" center="140,70" />
+						</animation>
+						<control type="image">
+							<width>140</width>
+							<height>120</height>
+							<texture>dialogs/dialog-bg-nobo.png</texture>
+							<bordertexture border="21">overlays/shadow.png</bordertexture>
+							<bordersize>20</bordersize>
+						</control>
+						<control type="image">
+							<width>140</width>
+							<height>120</height>
+							<texture colordiffuse="$VAR[SkinColorVar]">colors/grey.png</texture>
+							<bordersize>20</bordersize>
+							<include>Animation_FocusTextureFade</include>
+						</control>
+						<control type="image">
+							<top>20</top>
+							<left>30</left>
+							<width>80</width>
+							<height>$PARAM[icon_height]</height>
+							<texture fallback="$PARAM[fallback_image]">$PARAM[icon]</texture>
+							<aspectratio>keep</aspectratio>
+						</control>
+					</control>
+				</focusedlayout>
+				<include condition="!$PARAM[pvr_submenu]" content="SubmenuContent">
+					<param name="widget_target" value="$PARAM[widget_target]"/>
+					<param name="item_limit" value="$PARAM[item_limit]"/>
+					<param name="content_path" value="$PARAM[content_path]"/>
+				</include>
+				<include condition="$PARAM[pvr_submenu]" content="PVRSubMenuContent">
+					<param name="pvr_type" value="$PARAM[pvr_type]"/>
+				</include>
+			</control>
+		</definition>
+	</include>
 	<include name="SubmenuContent">
 		<content target="$PARAM[widget_target]" limit="$PARAM[item_limit]">$PARAM[content_path]</content>
 	</include>
